--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -33,6 +33,7 @@
 @import "components/modul_formularAntwort";
 @import "components/modul_boxBlau";
 @import "components/modul_bilderMitZoom";
+@import "components/modul_technischeSpezifikationen";
 
 /*
 @import "components/pagination-blog";
