--- a/templates/_include-block-components/modul_bilderMitZoom.twig
+++ b/templates/_include-block-components/modul_bilderMitZoom.twig
@@ -30,7 +30,7 @@
             </div>
 
             <div class="content-grid-12">
-                    <div class="bilderMitZoom" data-lightbox_vonText="von">
+                    <div class="bilderMitZoom" data-lightbox_vonText="{{ translation.t_von }}">
                         <div class="article-container" data-lightbox_bgColor="{{ block.overlayHintergrundFarbe }}">
 
                             {% for entry in block.bildAuswahl %}
