--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -34,6 +34,10 @@
 @import "components/modul_boxBlau";
 @import "components/modul_bilderMitZoom";
 @import "components/modul_technischeSpezifikationen";
+@import "components/modul_logoleisteSlider";
+@import "components/modul_sliderInfoTeaser";
+@import "components/modul_sliderTextBildTeaser";
+
 
 /*
 @import "components/pagination-blog";
