--- a/templates/_extends-elements/templ_contentpage.twig
+++ b/templates/_extends-elements/templ_contentpage.twig
@@ -15,6 +15,7 @@
 {% endblock %}
 
 {% block content %}
+  {% set bilderMitZoomCounter = 0 %}
   {% if pageId == '' %}{% set entry = seite404 %}{% endif %}
   <section>
     {% set matrixElemente = entry.generalModules %}
@@ -24,7 +25,8 @@
         {% if block.type.handle != 'abstand' %}
           {% set blockCounter = blockCounter + 1 %}
         {% endif %}
-        {% include ('_include-block-components/modul_' ~ block.type.handle) with {blockid: block.id, sectionname: entry.section.handle, pageid: entry.id, blockCounter: blockCounter }  %}
+        {% include ('_include-block-components/modul_' ~ block.type.handle) with {blockid: block.id, sectionname: entry.section.handle, pageid: entry.id, blockCounter: blockCounter, bilderMitZoomCounter: bilderMitZoomCounter }  %}
+        {% if block.type.handle == 'bilderMitZoom' %}{% set bilderMitZoomCounter = bilderMitZoomCounter + 1 %}{% endif %}
       {% endfor %}
     {% endif %}
   </section>
@@ -39,8 +41,10 @@
     {% set counter = 0 %}
     {% set logoleisteSlider = 0 %}
     {% set formular = 0 %}
-    {% set imageGallery = 0 %}
+    {% set bilderMitZoom = 0 %}
     {% set haendlerFilter = 0 %}
+    {% set sliderInfoTeaser = 0 %}
+    {% set sliderTextBildTeaser = 0 %}
     {% for block in matrixElemente %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
       {% if block.type.handle == 'haendlerFilter' %}
@@ -60,6 +64,25 @@
         {% set logoleisteSlider = logoleisteSlider + 1 %}
       {% endif %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
+      {# -------------------------------------------------------------------------------------------------------------------------------- #}
+      {% if block.type.handle == 'sliderInfoTeaser' %}
+        {% set counter = counter + 1 %}
+        {% if sliderInfoTeaser == 0 %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slick-sliderInfoTeaser-u-sliderTextBildTeaser.min.css">' }) %}
+        {% endif %}
+        {% set sliderInfoTeaser = sliderInfoTeaser + 1 %}
+      {% endif %}
+      {# -------------------------------------------------------------------------------------------------------------------------------- #}
+      {% if block.type.handle == 'sliderTextBildTeaser' %}
+        {% set counter = counter + 1 %}
+        {% if sliderTextBildTeaser == 0 %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slick-sliderInfoTeaser-u-sliderTextBildTeaser.min.css">' }) %}
+        {% endif %}
+        {% set sliderTextBildTeaser = sliderTextBildTeaser + 1 %}
+      {% endif %}
+      {# -------------------------------------------------------------------------------------------------------------------------------- #}
       {% if block.type.handle == 'formular' %}
         {% set counter = counter + 1 %}
         {% if formular == 0 %}
@@ -71,13 +94,12 @@
       {% endif %}
       {#
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
-      {% if block.type.handle == 'imageGallery' %}
+      {% if block.type.handle == 'bilderMitZoom' %}
         {% set counter = counter + 1 %}
-        {% if imageGallery == 0 %}
-          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/lazysizes.min.js"></script>' }) %}
-          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/jquery.imageGallery.min.js"></script>' }) %}
+        {% if bilderMitZoom == 0 %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script type="text/javascript" src="/assets/js/fliplightbox.min.js"></script>' }) %}
         {% endif %}
-        {% set imageGallery = imageGallery + 1 %}
+        {% set bilderMitZoom = bilderMitZoom + 1 %}
       {% endif %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
     {% endfor %}
