--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -25,6 +25,7 @@
 @import "components/_accordion";
 @import "components/modul-textAccordion";
 @import "components/modul-bildAccordion";
+@import "components/modul-accordionBild";
 @import "components/modul_accordionZweiSpalten";
 @import "components/modul_contentText";
 @import "components/formular";
@@ -37,6 +38,7 @@
 @import "components/modul_logoleisteSlider";
 @import "components/modul_sliderInfoTeaser";
 @import "components/modul_sliderTextBildTeaser";
+@import "components/modul_sliderHistory";
 
 
 /*
