--- a/templates/_extends-elements/templ_contentpage.twig
+++ b/templates/_extends-elements/templ_contentpage.twig
@@ -45,6 +45,7 @@
     {% set haendlerFilter = 0 %}
     {% set sliderInfoTeaser = 0 %}
     {% set sliderTextBildTeaser = 0 %}
+    {% set sliderHistory = 0 %}
     {% for block in matrixElemente %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
       {% if block.type.handle == 'haendlerFilter' %}
@@ -69,7 +70,7 @@
         {% set counter = counter + 1 %}
         {% if sliderInfoTeaser == 0 %}
           {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
-          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slick-sliderInfoTeaser-u-sliderTextBildTeaser.min.css">' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slickslider-InfoTeaser-textBildTeaser-History.min.css">' }) %}
         {% endif %}
         {% set sliderInfoTeaser = sliderInfoTeaser + 1 %}
       {% endif %}
@@ -78,9 +79,18 @@
         {% set counter = counter + 1 %}
         {% if sliderTextBildTeaser == 0 %}
           {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
-          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slick-sliderInfoTeaser-u-sliderTextBildTeaser.min.css">' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slickslider-InfoTeaser-textBildTeaser-History.min.css">' }) %}
         {% endif %}
         {% set sliderTextBildTeaser = sliderTextBildTeaser + 1 %}
+      {% endif %}
+      {# -------------------------------------------------------------------------------------------------------------------------------- #}
+      {% if block.type.handle == 'sliderHistory' %}
+        {% set counter = counter + 1 %}
+        {% if sliderHistory == 0 %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slickslider-InfoTeaser-textBildTeaser-History.min.css">' }) %}
+        {% endif %}
+        {% set sliderHistory = sliderHistory + 1 %}
       {% endif %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
       {% if block.type.handle == 'formular' %}
