--- a/assets/sccs/components/_formular.scss
+++ b/assets/sccs/components/_formular.scss
@@ -4,7 +4,7 @@
 	width: 100%;
 
 	.form-item-wrapper {
-		margin-bottom: 18px;
+		margin-bottom: 34px;
 	}
 
 	.form-group {
@@ -278,10 +278,10 @@
 		.lableInputField, .lableSelect{
 			position: absolute;
 			left: 16px;
-			top: 15px;
+			top: 18px;
 			z-index: 2;
 			color: rgba($wl-color-black, 0.7);
-			font-size: 0.9em;
+			@include responsive-font(18px, 23px, $font-family-DINNextLTPro-bold, 1.34);
 			display: inline-block;
 			padding: 2px 16px;
 			background-color: $wl-form-color-fields;
@@ -321,7 +321,7 @@
 			box-shadow: none;
 			outline: none;
 			background-color: $wl-form-color-fields;
-			color: $wl-form-color-text;
+			color: rgba($wl-color-black, 0.7);
 
 			padding-right: $wl-input-padding-right;
 			padding-left: $wl-input-padding-left;
@@ -426,8 +426,8 @@
 						width: 20px;
 						height: 20px;
 
-						border: 1px solid $wl-checkmark-border-color;
-						border-radius: 1px;
+						border: 2px solid $wl-color-green;
+						border-radius: 6px;
 						background-color: $wl-form-color-fields;
 					}
 
@@ -447,7 +447,7 @@
 					&::after {
 						content: "✔";
 						position: absolute;
-						top: 2px;
+						top: 5px;
 						left: 5px;
 						width: 10px;
 						height: 10px;
@@ -463,7 +463,7 @@
 		// Bei fokussiertem oder validem Inhalt
 		input, textarea, select {
 			&:focus, &:valid, &.filled {
-				border: 2px solid $wl-color-black;
+				border: 2px solid $wl-input-border-color;
 			}
 		}
 
@@ -507,8 +507,27 @@
 		label {
 			span {
 				&.labletext-dsgvo {
+
+					display: inline-block;
+					margin-top: -7px;
+
+					@include wl-breakpoint(900) {
+						margin-top: -3px;
+					}
+
 					color: $wl-form-color-text;
-					font-size: 0.85em;
+					font-size: 0.9em;
+					@include responsive-font(16px, 19px, $font-family-DINNextLTPro-bold, 1.34);
+
+					a{
+						@include link($wl-color-orange,$wl-color-orange-underline, $wl-color-orange, $wl-color-orange);
+						padding-bottom: 3px;
+
+						&:hover{
+							padding-bottom: 3px;
+						}
+					}
+
 				}
 			}
 		}
@@ -540,7 +559,7 @@
 					top: -11px;
 					text-align: center;
 					font-size: 9px;
-					color: rgba($wl-color-black, 0.4);
+					color: $wl-color-black;
 				}
 			}
 
@@ -627,10 +646,9 @@
 
 			&.submit-button {
 				border: none;
-				@include btn($wl-color-white, $wl-color-blue, $wl-color-blue, $wl-color-grey, $wl-color-blue, $wl-color-black);
+				@include btn($wl-color-blue, $wl-color-white, $wl-color-blue, $wl-color-white, $wl-color-blue, $wl-color-blue)
 			}
 		}
-
 
 
 		// Honeypot für Spam-Prevention
@@ -656,6 +674,7 @@
 
 
 .form-info {
+	display: none;
 	margin-top: 25px;
 	margin-bottom: 50px;
 	color: $wl-form-color-error;
